Fix sections margins, intro gaps, img size etc...

--- a/FrontEnd/styles/intro.css
+++ b/FrontEnd/styles/intro.css
@@ -3,7 +3,9 @@
 #introduction {
 	display: flex;
 	align-items: center;
-	margin: 130px 0px;
+	justify-content: space-between;
+	gap: 70px;
+	margin: 130px 90px;
 }
 
 #introduction figure, article {
@@ -12,8 +14,9 @@
 
 #introduction img {
 	display: block;
-	margin: auto;
-	width: 80%;
+	margin-right: auto;
+	width: 474px;
+	height: 355px;
 }
 
 #introduction h2 {
@@ -21,5 +24,5 @@
 }
 
 #introduction p {
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
 }
