--- a/FrontEnd/styles/main.css
+++ b/FrontEnd/styles/main.css
@@ -63,7 +63,7 @@ body {
 }
 
 section {
-	margin: 70px 0;
+	margin: 70px 90px;
 }
 
 h2{
